# natural-demo-api

./: .gitignore  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  ruff.toml
doc/: Context v1.1_ Complete UX System Documentation.md
response/a_to_b/: 1.json
src/: main.py
src/api/: api_config.py
src/api/chathistory/: routes.py
src/api/chathistory/models/: save_part.py
src/api/hello/: routes.py
src/api/notification/: __init__.py  routes.py
src/api/notification/models/: request.py
src/api/planning/: __init__.py  routes.py
src/api/planning/data/: __init__.py  a2b_step_1.json  a2b_step_2.json  a2b_step_3.json  a2b_step_4.json  a2b_step_5.json  a2b_step_6.json  a2b_suggestions.json  birthday_suggestions.json  empty.json  response_1.json
src/api/planning/data/atob/: step_1.json  step_2.json  step_3.json  step_4.json  step_5.json  step_6.json
src/api/planning/data/birthday/: step_1.json  step_2.json  step_3.json  step_4.json  step_5.json  step_6.json  step_7.json  step_8.json  step_9.json  step_agent_done.json  step_auto_done.py  step_choose_meal.json  step_party_manual.py
src/api/planning/model/: planning_flow_type.py  planning_interaction.py  save_part.py
src/api/planning/models/: request.py
src/base/settings/: settings.py
src/base/util/: log_util.py
src/config/: exception_config.py  rest_config.py
src/rest/: healthz.py  home.py  rest.py
src/services/birthday/: __init__.py  birthday_service.py
src/services/notification/: notification_service.py
src/store/birthday/: party_preferences_store.py
src/store/chat/: chat_name_store.py  chat_store.py
src/util/: meta.py  os_util.py  request_util.py  rest.py
