[project]
name = "fastapi-demo"
version = "0.1.0"
description = "A simple FastAPI demo project"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.13",
    "logging>=0.4.9.6",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12.10"
disable_error_code = ["arg-type", "attr-defined", "call-overload"]
#disallow_untyped_defs = true        # 强制函数必须有类型注解
disallow_any_unimported = true      # 检测不存在的导入
#warn_return_any = true              # 检测返回 Any 类型
#warn_unused_ignores = true          # 检测无用的类型忽略